<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profileBg"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar" />

    <RelativeLayout
        android:id="@+id/NotificationRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@color/white">

        <ImageView
            android:id="@+id/notif"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_margin="@dimen/dp_8"
            android:background="@drawable/ic_notification" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_toEndOf="@+id/notif"
            android:text="@string/noti"
            android:textColor="@color/colorPrimaryDark" />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_10" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey" />

    <RelativeLayout
        android:id="@+id/cleaCacheRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_margin="@dimen/dp_8"
            android:background="@drawable/ic_clear_cache" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_toEndOf="@+id/imageView"
            android:text="Clear cache"
            android:textColor="@color/colorPrimaryDark" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/privacyPolicyRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white">

        <ImageView
            android:id="@+id/privacyRL"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_margin="@dimen/dp_8"
            android:background="@drawable/ic_privacy_policy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_toEndOf="@+id/privacyRL"
            android:text="@string/privacy_policy"
            android:textColor="@color/colorPrimaryDark" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey" />

    <RelativeLayout
        android:id="@+id/termsOfsericeRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/terms"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_margin="@dimen/dp_8"
            android:background="@drawable/ic_terms_service" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_toEndOf="@+id/terms"
            android:text="@string/terms_of_service"
            android:textColor="@color/colorPrimaryDark" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey" />

    <RelativeLayout
        android:id="@+id/helpRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/help"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_margin="@dimen/dp_8"
            android:background="@drawable/ic_help" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_toEndOf="@+id/help"
            android:text="@string/help_faq"
            android:textColor="@color/colorPrimaryDark" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/checkUpdateRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/white">

        <ImageView
            android:id="@+id/check"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_margin="@dimen/dp_8"
            android:background="@drawable/ic_check_update" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_toEndOf="@+id/check"
            android:text="@string/check_update"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/versionCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_10"
            android:text="Version 1.0"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_14" />
    </RelativeLayout>

    <Button
        android:id="@+id/signOutBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_15"
        android:background="@color/orange_Button"
        android:text="Sign Out"
        android:visibility="gone"
        android:textColor="@color/White" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_25"
        android:text="@string/kacyber_security_technologies_ltd"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_5dp"
        android:text="@string/all_right_reserved"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/sp_14" />
</LinearLayout>
