<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/margin_40"
    android:layout_marginRight="@dimen/margin_40"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_60"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dp_20"
        android:src="@mipmap/ic_launcher" />

    <include
        layout="@layout/common_line_horizontal"
        android:layout_width="match_parent"
        android:layout_height="1px" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/dp_10"
        android:text="@string/sign_in"
        android:textColor="@color/common_text_color"
        android:textSize="@dimen/text_24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/dp_10"
        android:text="@string/login_hint"
        android:textColor="@color/common_text_color"
        android:textSize="@dimen/text_14" />

    <EditText
        android:id="@+id/et_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@drawable/bg_input"
        android:imeOptions="actionNext"
        android:padding="@dimen/dp_10"
        android:singleLine="true"
        android:textSize="@dimen/text_14" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/dp_10"
        android:text="@string/password_hint"
        android:textSize="@dimen/text_14" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"

            android:background="@drawable/bg_input"
            android:imeOptions="actionDone"
            android:padding="@dimen/dp_10"
            android:password="true"
            android:singleLine="true"
            android:textSize="@dimen/text_14" />

        <LinearLayout
            android:id="@+id/eyepswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_8"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_view_pwd" />

        </LinearLayout>
    </RelativeLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/bg_btn_signin"
        android:text="@string/text_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_16" />

</LinearLayout>